--- a/webapp/view/EmployeeList.view.xml
+++ b/webapp/view/EmployeeList.view.xml
@@ -92,7 +92,7 @@
             <ToolbarSpacer id="tbSpacer" width="48vw"/>
             <!-- <SearchField id="srchEmployeeList" width="10vw"/> -->
             <Button id="btnAdd" text="{i18n>add}"/>
-            <Button id="btnDelete" text="{i18n>delete}" type="Reject"/>
+            <Button id="btnDelete" text="{i18n>delete}" type="Reject" press="_onPressDelete"/>
             <content/>
             </Toolbar>
         </headerToolbar>
