--- a/webapp/view/EmployeeList.view.xml
+++ b/webapp/view/EmployeeList.view.xml
@@ -91,7 +91,7 @@
             <Text id="txtEmployeeList" text="{i18n>employees}" width="10vw"/>
             <ToolbarSpacer id="tbSpacer" width="48vw"/>
             <!-- <SearchField id="srchEmployeeList" width="10vw"/> -->
-            <Button id="btnAdd" text="{i18n>add}"/>
+            <Button id="btnAdd" text="{i18n>add}" press="onPressAdd"/>
             <Button id="btnDelete" text="{i18n>delete}" type="Reject" press="_onPressDelete"/>
             <content/>
             </Toolbar>
